# browserbox

./: .gitignore  .pnpmfile.cjs  Makefile  README.md  auto.js  automationEngine.js  configLoader.js  index.js  log.js  manual.js  package.json  pnpm-lock.yaml  requirements.txt  setup.ps1  setup.sh  utils.js
client/: pyproject.toml
client/bbclient/: cli.py  env_builder.py  packer.py  uploader.py
client/tests/: test_env_builder.py
config/input/: automation.json
server/: Dockerfile  pyproject.toml
server/bbserver/: deps.py  environment.py  main.py  pool.py
server/bbserver/routers/: run.py  upload.py
server/tests/: test_deps.py
shared/: pyproject.toml
shared/bbshared/: const.py  fingerprint.py
