[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bbclient"
version = "0.1.0"
description = "BrowserBox 客户端 - 创建可复用的浏览器环境"
authors = [{name = "BrowserBox 团队"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "playwright>=1.40.0",
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black",
    "flake8",
]

[project.scripts]
bbclient = "bbclient.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["bbclient*", "bbshared*"]

[tool.setuptools.package-data]
bbclient = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]