[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bbshared"
version = "0.1.0"
description = "BrowserBox 客户端和服务端的共享模块"
authors = [{name = "BrowserBox 团队"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black",
    "flake8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["bbshared*"]